--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -30,7 +30,7 @@
   transition: 1s;
 
   &:hover {
-    transform: scale(150%);
+    transform: scale(125%);
   }
 }
 
@@ -46,6 +46,6 @@
   &:hover {
     background-color: $white;
     color: $blue;
-    border: 1px solid $blue;
+    outline: 1px solid $blue;
   }
 }
